--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/basics",
+  "name": "astro-wars",
   "type": "module",
   "version": "0.0.1",
   "private": true,
@@ -12,8 +12,14 @@
   },
   "dependencies": {
     "@astrojs/react": "^1.1.4",
+    "@astrojs/tailwind": "^2.0.1",
+    "@fontsource/inter": "^4.5.12",
     "astro": "^1.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.1.8"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.21"
   }
 }
