--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@astrojs/react": "^1.1.4",
     "@astrojs/tailwind": "^2.0.1",
     "@fontsource/inter": "^4.5.12",
+    "@nanostores/react": "^0.4.0",
     "astro": "^1.3.0",
+    "nanostores": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.1.8"
